master:

* Drops support to end-of-life'd ruby 2.0.
* Improvement: Paperclip now supports aws-sdk v2
  @betesh, @davetchen,
  https://github.com/thoughtbot/paperclip/pull/1903

  If your Gemfile contains aws-sdk (>= 2.0.0) and aws-sdk-v1, paperclip will use
  aws-sdk v2. With aws-sdk v2, S3 storage requires you to set the s3_region.
  s3_region may be nested in s3_credentials, and (if not nested in
  s3_credentials) it may be a Proc.

4.3

See patch versions in v4.3 NEWS:
https://github.com/thoughtbot/paperclip/blob/v4.3/NEWS

4.3.0 (2015-06-18):

* Improvement: Update aws-sdk and cucumber gem versions.
* Improvement: Add `length` alias for `size` method in AbstractAdapter.
* Improvement: Removed some cruft
* Improvement: deep_merge! Attachment definitions
* Improvement: Switch to mimemagic gem for content-type detection
* Improvement: Allows multiple content types for spoof detector
* Bug Fix: Don't assume we have Rails.env if we have Rails
* Performance: Decrease Memory footprint
* Ruby Versioning: Drop support for 1.9.3 (EOL'ed)
* Rails Versioning: Drop support for 4.0.0 (EOL'ed)

4.2.4 (2015-06-05):

* Rollback backwards incompatible change, allowing paperclip to run on
  Ruby >= 1.9.2.

4.2.3:

* Fix dependency specifications (didn't work with Rails 4.1)
* Fix paperclip tests in CI

4.2.2:

* Security fix: Fix a potential security issue with spoofing

4.2.1:

* Improvement: Added `validate_media_type` options to allow/bypass spoof check
* Improvement: Added incremental backoff when AWS gives us a SlowDown error.
* Improvement: Stream downloads when usign aws-sdk.
* Improvement: Documentation fixes, includes Windows instructions.
* Improvement: Added pt-BR, zh-HK, zh-CN, zh-TW, and ja-JP locales.
* Improvement: Better escaping for characters in URLs
* Improvement: Honor `fog_credentials[:scheme]`
* Improvement: Also look for custom processors in lib/paperclip
* Improvement: id partitioning for string IDs works like integer id